# TESSRYX

./: .gitignore  CHANGELOG.md  CLAUDE_INSTRUCTIONS.md  CLAUDE_INSTRUCTIONS_INAPP.md  DNA.md  EXHAUSTIVE STEAL LIST CONSENSUS → TESSRYX.md  EXHAUSTIVE STEAL LIST EOS → TESSRYX.md  EXHAUSTIVE STEAL LIST GREGORE → TESSRYX.md  GCsynth1 - Genius Council Synthesis.md  GCsynth1.5 - Claude Semi-Final Synthesis.md  GCsynth2 - Genius Council Synthesis.md  GENIUS_COUNCIL_PROMPT.md  INSTRUCTION_SYSTEM_COMPLETE.md  LOGO_DESIGN_BRIEF.md  README.md  ROADMAP.md  SESSION_LOG.md  STATUS.md  STEAL_REGISTRY.md  alembic.ini  pyproject.toml  test_api.py  test_first_solver.py  test_solver_features.py
alembic/: env.py
alembic/versions/: f7e6e6058dcc_initial_schema_entities_relations_.py
brand/: BRAND_GUIDELINES.md
docs/: ARCHITECTURE.md  CONSTRAINT_TAXONOMY_V1.md  IMPACT-AWARE-DOC-SYNC.md  INTEGRATION-SUMMARY.md  MONTH_2_SUMMARY.md  PHASE_1_COMPLETE.md  PHASE_1_MONTH_1_COMPLETE.md  PHASE_1_MONTH_2_COMPLETE.md  PHASE_1_MONTH_3_COMPLETE.md  SESSION_003_COMPLETE.md  TessIR_v1.0_SPEC.md
docs/ADR/: ADR-000-TEMPLATE.md  ADR-001-python-for-v1.md  ADR-002-postgres-first.md  ADR-003-open-tessir-spec.md  ADR-004-OR-Tools-Primary-Solver.md  ADR-004-software-dev-wedge.md  ADR-005-solver-strategy.md
docs/Pitch/: CONTINUATION_INSTRUCTIONS.md  CONVERSION_GUIDE.md  CONVERSION_SUCCESS.md  CRITICAL_ISSUES_SUMMARY.md  Executive Summary.docx  Executive_Summary_FIXED.md  FACT_CHECK_AUDIT.md  FINAL_STATUS.md  Master Pitch Document.docx  Master_Pitch_Document_FIXED.md  PITCH_REBUILD_STATUS.md  REBUILD_COMPLETE.md  SESSION_HANDOFF.md  TESSRYX Pitch Deck.html  TESSRYX_Pitch_Deck_FIXED.html  Technical Brief.docx  Technical Specifications.docx  Technical_Brief_FIXED.md
src/: README.md
src/storage/: index.ts  interface.ts  schema.ts  sqlite-engine.ts
src/tessryx/: __init__.py  py.typed
src/tessryx/api/: __init__.py  crud_entities.py  database.py  main.py  routers_entities.py  schemas.py
src/tessryx/core/: __init__.py  constraint.py  entity.py  provenance.py  relation.py  types.py
src/tessryx/database/: __init__.py  models.py
src/tessryx/kernel/: __init__.py  explanation_generator.py  graph_ops.py  impact_analyzer.py  provenance_ledger.py  query_engine.py  validator.py
src/tessryx/kernel/solver/: __init__.py  base.py  or_tools_adapter.py
tests/: __init__.py  conftest.py  test_explanation_generator.py  test_graph_ops.py  test_graph_performance.py  test_graph_properties.py  test_impact_analyzer.py  test_provenance_ledger.py  test_query_engine.py  test_validator.py
tests/canonical_suite/: README.md  SCENARIO-TEMPLATE.yaml
tests/unit/: test_constraint.py  test_entity.py  test_graph_ops.py  test_provenance.py  test_relation.py
